# cabal-doctest-demo

./: README.md  cabal-doctest-demo.cabal  cabal.project
docspec-static-demo/: docspec-static-demo.cabal
docspec-static-demo/app/: Main.hs
docspec-static-demo/app/CabalDocspec/: Lexer.hs
doctest-codegen-driver/: doctest-codegen-driver.cabal
doctest-codegen-driver/app/: Main.hs
src/: MyDep.hsc  MyLib.hs  MyOtherDep.hs
