cabal-version:      3.6
name:               doctest-codegen-driver
version:            0.1.0.0
synopsis:           A driver that can be used from the code-generators clause of a cabal test stanza to run the doctest program

homepage:

license:            BSD-3-Clause
author:             Gershom Bazerman
maintainer:         gershomb@gmail.com

extra-source-files: CHANGELOG.md

executable doctest-codegen-driver
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0, filepath, directory
    hs-source-dirs:   app
    default-language: Haskell2010
